--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
   <div class="card">
-    <h1>Hey 💕<br>Will you be my Valentine?</h1>
+    <h1>Hey Loveeeee💕<br>Will you be my Valentine?</h1>
     <p>I promise good vibes, laughs, and snacks 😌</p>
 
     <div class="buttons">
@@ -93,15 +93,15 @@
 
     const persuasionTexts = [
       "Are you sure? 🥺",
-      "That felt like a misclick 😏",
-      "Think again… 💭",
-      "I’m actually very nice 😇",
-      "We’d be cute though 💞",
-      "This is getting suspicious 👀",
+      "We mtoto, ntakuchapaa, finya YES!!! 😏",
+      "Baaaabe… 💭",
+      "Ni mimi unataka kufanyia hivi? 😇",
+      "Huendi Mbinguni wewee 💞",
+      "Like fr fr hunitakii 👀",
       "You’re running out of No’s 😬",
-      "Last few chances 😌",
-      "Okay now you’re just teasing 😭",
-      "Alright… decision time 💘"
+      "Last few chances we mtoto 😌",
+      "Shida yako ni kudhani I'll give up 😭",
+      "Uzuri ni mimi naamua 💘"
     ];
 
     noBtn.addEventListener("click", () => {
@@ -121,14 +121,14 @@
       if (noClicks >= 10) {
         noBtn.style.display = "none";
         yesBtn.style.transform = "scale(2.2)";
-        message.textContent = "No more No’s 😌 The universe has decided 💖";
+        message.textContent = "Thanksssss 😌 Nakupendaaaaaaa 💖";
       }
     });
 
     yesBtn.addEventListener("click", () => {
       document.querySelector(".card").innerHTML = `
         <h1>YAYYYY 💘🥰</h1>
-        <p style="font-size:18px;">You just made me smile like crazy.</p>
+        <p style="font-size:18px;">Nilijua tu unanipenda.</p>
         <p>Happy Valentine’s Day ❤️</p>
         <p style="margin-top:15px;">Now screenshot this and send it to me 😏</p>
       `;
