--- a/index.html
+++ b/index.html
@@ -1,134 +1,332 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Be My Valentine 💜</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #a18cd1, #fbc2eb); /* purple gradient */
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Be My Valentine 💜</title>
 
-    .card {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      max-width: 420px;
-    }
+<style>
+:root{
+  --bg1:#1b0b2e; --bg2:#3a0a63;
+  --card:#ffffff12; --card2:#ffffff1f;
+  --text:#f6edff; --muted:#e9d9ff;
+  --yes:#b65cff; --yes2:#7d2aff;
+  --no:#ffffff22; --no2:#ffffff33;
+  --shadow:0 18px 50px rgba(0,0,0,.35);
+}
 
-    h1 {
-      margin-bottom: 10px;
-      color: #6a0dad; /* deep purple */
-    }
+*{ box-sizing:border-box; }
+body{
+  margin:0; min-height:100svh;
+  display:flex; align-items:center; justify-content:center;
+  color:var(--text);
+  font-family: ui-rounded, system-ui, Segoe UI, Roboto, Arial;
+  background:
+    radial-gradient(1200px 800px at 15% 20%, #7c2cff44, transparent 55%),
+    radial-gradient(900px 700px at 85% 30%, #ff63d744, transparent 60%),
+    linear-gradient(135deg, var(--bg1), var(--bg2));
+  overflow:hidden; padding:24px;
+  transition: background 0.5s;
+}
 
-    p {
-      color: #666;
-    }
+/* Floating hearts */
+.float-heart{
+  position:absolute; left:var(--x); top:110%;
+  font-size: var(--s); opacity:.18;
+  animation: rise var(--d) linear infinite;
+  filter: blur(.2px); user-select:none; pointer-events:none;
+}
+@keyframes rise{
+  0%{ transform:translateY(0) rotate(0deg); }
+  100%{ transform:translateY(-140vh) rotate(360deg); }
+}
 
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
+/* Card */
+.card{
+  width:min(720px,95vw);
+  background: linear-gradient(180deg, var(--card), var(--card2));
+  border:1px solid #ffffff26;
+  border-radius:26px;
+  box-shadow:var(--shadow);
+  padding:28px 22px;
+  backdrop-filter: blur(10px);
+  position:relative;
+  text-align:center;
+}
 
-    button {
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      font-size: 18px;
-      padding: 14px 28px;
-    }
+h1{margin:14px 0 10px; font-size:clamp(28px,4vw,44px); line-height:1.05;}
+.sub{margin:0 0 18px; color: var(--muted); font-size: clamp(14px,2vw,18px); line-height:1.5;}
+.badge{display:inline-flex; align-items:center; gap:10px; padding:10px 14px; border-radius:999px; border:1px solid #ffffff28; background:#ffffff10; font-weight:600; letter-spacing:.3px;}
 
-    #yesBtn {
-      background-color: #6a0dad;
-      color: white;
-      transform: scale(1);
-    }
+.prompt{margin-top:14px; background:#ffffff0e; border:1px solid #ffffff1f; padding:14px; border-radius:18px; position:relative;}
+.message{min-height:1.8em; margin:10px 0 0; font-weight:700; letter-spacing:.2px; color:#ffe8ff; text-shadow:0 10px 25px rgba(0,0,0,.25);}
+.btn-row{
+  display:flex; flex-wrap:wrap; gap:12px; margin-top:16px;
+  justify-content:center; align-items:center;
+  min-height:64px;
+}
+button{
+  border:0; border-radius:16px; padding:14px 18px;
+  font-size:16px; font-weight:800; cursor:pointer;
+  transition: transform .12s ease, filter .12s ease, opacity .12s ease;
+  color: var(--text); outline:none; user-select:none;
+}
+button:active{ transform: scale(.98); }
+.yes{background: linear-gradient(135deg,var(--yes),var(--yes2)); box-shadow:0 14px 30px rgba(182,92,255,.35);}
+.yes:hover{ filter:brightness(1.07); }
+.no{background: linear-gradient(135deg,var(--no),var(--no2)); border:1px solid #ffffff26;}
+.no:hover{ filter:brightness(1.08); }
+.tiny{display:block; margin-top:8px; color:#f0e3ffb3; font-size:12.5px;}
 
-    #noBtn {
-      background-color: #b19cd9;
-      color: white;
-      transform: scale(1); /* fixed scale */
-    }
+.success{
+  margin-top:16px; padding:16px;
+  border-radius:18px;
+  background: linear-gradient(180deg, #b65cff22, #ff63d722);
+  border:1px solid #ffffff2a;
+  text-align:center;
+}
 
-    .message {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #555;
-      min-height: 24px;
-    }
-  </style>
+/* Make the NO button movable smoothly */
+#noBtn{
+  position: relative;
+  will-change: transform;
+  transition: transform 120ms ease;
+}
+
+/* Pop hearts confetti */
+.pop-heart{
+  position:fixed; left:var(--px); top:var(--py);
+  font-size:var(--ps); pointer-events:none;
+  animation: pop 900ms ease-out forwards;
+  filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
+}
+@keyframes pop{
+  0%{transform:translate(-50%,-50%) scale(.9);opacity:0;}
+  15%{opacity:1;}
+  100%{transform:translate(calc(-50% + var(--dx)), calc(-50% + var(--dy))) rotate(var(--rot)) scale(1.25); opacity:0;}
+}
+
+/* Screen shake */
+@keyframes shake {
+  0%   { transform: translateX(0); }
+  20%  { transform: translateX(-6px); }
+  40%  { transform: translateX(6px); }
+  60%  { transform: translateX(-4px); }
+  80%  { transform: translateX(4px); }
+  100% { transform: translateX(0); }
+}
+.card.shake{
+  animation: shake 220ms ease-in-out;
+}
+@media (prefers-reduced-motion: reduce){
+  .card.shake{ animation:none; }
+  .pop-heart{ animation:none; }
+  .float-heart{ animation:none; }
+}
+
+/* Stages */
+.stage {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.45s ease;
+}
+.stage.active {
+  display: block;
+  opacity: 1;
+}
+</style>
 </head>
+
 <body>
+<!-- soft floating hearts -->
+<div class="float-heart" style="--x:8%;--s:18px;--d:14s;">💜</div>
+<div class="float-heart" style="--x:18%;--s:24px;--d:18s;">💟</div>
+<div class="float-heart" style="--x:32%;--s:16px;--d:16s;">💜</div>
+<div class="float-heart" style="--x:46%;--s:22px;--d:20s;">💖</div>
+<div class="float-heart" style="--x:60%;--s:18px;--d:15s;">💜</div>
+<div class="float-heart" style="--x:74%;--s:26px;--d:22s;">💘</div>
+<div class="float-heart" style="--x:88%;--s:17px;--d:17s;">💜</div>
 
-  <div class="card">
-    <h1>Hey Loveeeee💜<br>Will you be my Valentine?</h1>
-    <p>I promise good vibes, laughs, and purple magic 😌</p>
-
-    <div class="buttons">
-      <button id="yesBtn">Yes 💜</button>
-      <button id="noBtn">No 🙈</button>
-    </div>
-
-    <div class="message" id="message"></div>
+<main class="card" id="card">
+  <!-- Stage 1 -->
+  <div class="stage active" id="stage1">
+    <h1>So… what do you think this is all about? 🤔👀</h1>
+    <p class="sub">Take a guess… najua unakuwanga msmart!</p>
+    <button class="yes" id="btn1">Let’s find out 👀👀</button>
   </div>
 
-  <script>
-    let yesScale = 1;
-    let noClicks = 0;
+  <!-- Stage 2 -->
+  <div class="stage" id="stage2">
+    <h1>Wacha sasa nikuambiee, waah… 😌✨</h1>
+    <button class="yes" id="btn2">Enhe 👀👀</button>
+  </div>
 
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const message = document.getElementById("message");
+  <!-- Stage 3 -->
+  <div class="stage" id="stage3">
+    <h1>Sooooo… 👀😘</h1>
+    <button class="yes" id="btn3">What?? 💜</button>
+  </div>
 
-    const persuasionTexts = [
-      "Are you sure? 🥺",
-      "We mtoto, finya YES!!! 😏",
-      "Baaaabe… 💭",
-      "Ni mimi unataka kufanyia hivi? 😇",
-      "Huendi Mbinguni wewee 💞",
-      "Like fr fr hunitakii 👀",
-      "You’re running out of No’s 😬",
-      "Last few chances we mtoto 😌",
-      "Shida yako ni kudhani I'll give up 😭",
-      "Uzuri ni mimi naamua 💘"
-    ];
+  <!-- Stage 4 -->
+  <div class="stage" id="stage4">
+    <h1>Ashleyyyyyyy… 👀😘</h1>
+    <button class="yes" id="btn4">Niambie Kababaa?? 💜</button>
+  </div>
 
-    noBtn.addEventListener("click", () => {
-      noClicks++;
+  <!-- Stage 5 -->
+  <div class="stage" id="stage5">
+    <span class="badge">💜 Good Vibes</span>
+    <h1>Will you be my Valentine, Kababyyy?? 💘</h1>
+    <p class="sub">I’m officially applying for the position of your Valentine 😌✨</p>
 
-      // Only grow the Yes button, keep No button fixed
-      yesScale += 0.25;
-      yesBtn.style.transform = `scale(${yesScale})`;
+    <div class="prompt">
+      <div id="message" class="message" aria-live="polite"></div>
 
-      message.textContent =
-        persuasionTexts[Math.min(noClicks - 1, persuasionTexts.length - 1)];
+      <div class="btn-row" id="buttons">
+        <button class="yes" id="yesBtn">Yes 💜</button>
+        <button class="no" id="noBtn">No 😏</button>
+      </div>
 
-      if (noClicks >= 10) {
-        noBtn.style.display = "none";
-        yesBtn.style.transform = "scale(2.2)";
-        message.textContent = "No more No’s 😌 The universe has decided 💜";
-      }
-    });
+      <span class="tiny" id="psText">P.S. "No" inafinyika huskii…</span>
+    </div>
+  </div>
 
-    yesBtn.addEventListener("click", () => {
-      document.querySelector(".card").innerHTML = `
-        <h1>YAYYYY 💘🥰</h1>
-        <p style="font-size:18px;">Nilijua tu unanipenda.</p>
-        <p>Happy Valentine’s Day 💜</p>
-        <p style="margin-top:15px;">Now screenshot this and send it to me 😏</p>
-      `;
-    });
-  </script>
+  <!-- Stage 6 -->
+  <div class="stage" id="stage6">
+    <div class="success" id="successBox"></div>
+  </div>
+</main>
 
+<script>
+/* ---------- Stage navigation with fade-in ---------- */
+const stageIds = ["stage1","stage2","stage3","stage4","stage5","stage6"];
+
+function showStage(id){
+  stageIds.forEach(s => {
+    const el = document.getElementById(s);
+    if(!el) return;
+    if(s === id){
+      el.style.display = "block"; // Ensure visible for transition
+      requestAnimationFrame(()=> el.classList.add("active"));
+    } else {
+      el.classList.remove("active");
+      setTimeout(()=> { if(!el.classList.contains("active")) el.style.display="none"; }, 450);
+    }
+  });
+}
+
+document.getElementById("btn1").addEventListener("click", ()=> showStage("stage2"));
+document.getElementById("btn2").addEventListener("click", ()=> showStage("stage3"));
+document.getElementById("btn3").addEventListener("click", ()=> showStage("stage4"));
+document.getElementById("btn4").addEventListener("click", ()=> showStage("stage5"));
+
+/* ---------- Hearts pop ---------- */
+function heartPop(x,y){
+  const hearts=["💜","💟","💖","💘","✨"];
+  for(let i=0;i<18;i++){
+    const h=document.createElement("div");
+    h.className="pop-heart";
+    h.textContent=hearts[Math.floor(Math.random()*hearts.length)];
+    h.style.setProperty("--px",x+"px");
+    h.style.setProperty("--py",y+"px");
+    h.style.setProperty("--dx",(Math.random()*220-110).toFixed(0)+"px");
+    h.style.setProperty("--dy",(Math.random()*240-140).toFixed(0)+"px");
+    h.style.setProperty("--rot",(Math.random()*260-130).toFixed(0)+"deg");
+    h.style.setProperty("--ps",(Math.random()*16+14).toFixed(0)+"px");
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),950);
+  }
+}
+
+/* ---------- Screen shake ---------- */
+const card = document.getElementById("card");
+function shakeCard(){ card.classList.remove("shake"); void card.offsetWidth; card.classList.add("shake"); setTimeout(()=>card.classList.remove("shake"),240); }
+
+/* ---------- Yes/No logic ---------- */
+const yesBtn = document.getElementById("yesBtn");
+const noBtn = document.getElementById("noBtn");
+const messageEl = document.getElementById("message");
+const successBox = document.getElementById("successBox");
+
+let noClicks = 0;
+let locked = false;
+
+const noMessages = [
+  "We mtoto, finya YES!!! 😏☹️",
+  "Baaaabe... 🙄😏",
+  "Ni mimi unataka kufanyia hivi? 😭😭",
+  "Last chance we mtoto 😡😌",
+  "Uzuri ni mimi naamua 🤣🤣"
+];
+
+function registerNoAttempt(){
+  if(locked) return;
+  noClicks++;
+  messageEl.textContent = noMessages[Math.min(noClicks-1, noMessages.length-1)];
+  shakeCard();
+  if(noClicks >= 5){
+    noBtn.style.display = "none";
+    yesBtn.style.transform = "scale(1.08)";
+    yesBtn.style.filter = "brightness(1.08)";
+  }
+}
+
+function dodgeNoButton(){
+  if(locked || noBtn.style.display === "none") return;
+  const prompt = document.querySelector("#stage5 .prompt");
+  const pRect = prompt.getBoundingClientRect();
+  const bRect = noBtn.getBoundingClientRect();
+  const maxX = Math.max(60, Math.min(170, (pRect.width/2) - (bRect.width/2) - 14));
+  const maxY = Math.max(30, Math.min(120, (pRect.height/2) - (bRect.height/2) - 14));
+  const dx = (Math.random() * 2 - 1) * maxX;
+  const dy = (Math.random() * 2 - 1) * maxY;
+  noBtn.style.transform = `translate(${dx}px, ${dy}px)`;
+}
+
+noBtn.addEventListener("pointerenter", dodgeNoButton);
+noBtn.addEventListener("pointerdown", (e) => { registerNoAttempt(); dodgeNoButton(); if(e.pointerType==="touch") e.preventDefault(); });
+noBtn.addEventListener("click", () => { registerNoAttempt(); dodgeNoButton(); });
+
+/* ---------- Typing effect ---------- */
+const sleep = (ms) => new Promise(r=>setTimeout(r,ms));
+function typeText(text, el, speed=28){
+  const chars = Array.from(text);
+  return new Promise(resolve => {
+    let i=0;
+    const timer = setInterval(()=>{
+      el.append(chars[i]); i++;
+      if(i>=chars.length){ clearInterval(timer); resolve(); }
+    }, speed);
+  });
+}
+async function typeLines(lines, el, speed=28, linePause=380){
+  el.innerHTML="";
+  for(let i=0;i<lines.length;i++){
+    await typeText(lines[i], el, speed);
+    if(i<lines.length-1){ el.appendChild(document.createElement("br")); await sleep(linePause); }
+  }
+}
+
+yesBtn.addEventListener("click", async (e)=>{
+  if(locked) return;
+  locked = true;
+  heartPop(e.clientX, e.clientY);
+  showStage("stage6");
+  successBox.innerHTML=`
+    <div style="font-weight:900; font-size:20px; margin-bottom:8px;">It’s a date! 💘💜</div>
+    <div id="typedMsg" style="color:#f3e9ff; line-height:1.6; font-weight:700;"></div>
+  `;
+  const lines=[
+    "I knew you’d say YES! 🥺💜",
+    "YAAYYYY!! Nilijua tu unanipenda",
+    "Happy Valentine’s Day, my love! 🌹💜",
+    "Ulikuwa unafinya No ndio?? Feilyaaa😂😂"
+  ];
+  await typeLines(lines, document.getElementById("typedMsg"),26,320);
+  setTimeout(()=>heartPop(window.innerWidth*0.5, window.innerHeight*0.35),250);
+  setTimeout(()=>heartPop(window.innerWidth*0.35, window.innerHeight*0.55),520);
+  setTimeout(()=>heartPop(window.innerWidth*0.65, window.innerHeight*0.55),760);
+});
+</script>
 </body>
 </html>
