--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ button:active{ transform: scale(.98); }
   position: relative;
   will-change: transform;
   transition: transform 120ms ease;
+  cursor: grab;
 }
 
 /* Pop hearts confetti */
@@ -134,6 +135,19 @@ button:active{ transform: scale(.98); }
   display: block;
   opacity: 1;
 }
+
+/* Ashley personalized floating hearts */
+#stage4 .float-name {
+  position: absolute;
+  font-size: 18px;
+  opacity: 0.8;
+  animation: floatName 6s linear infinite;
+}
+@keyframes floatName{
+  0% { transform: translateY(0) rotate(0deg);}
+  50% { transform: translateY(-20px) rotate(15deg);}
+  100% { transform: translateY(0) rotate(-15deg);}
+}
 </style>
 </head>
 
@@ -171,6 +185,8 @@ button:active{ transform: scale(.98); }
   <div class="stage" id="stage4">
     <h1>Ashleyyyyyyy… 👀😘</h1>
     <button class="yes" id="btn4">Niambie Kababaa?? 💜</button>
+    <div class="float-name" style="--x:20%; left:20%; top:50%;">💜 Ashley 💜</div>
+    <div class="float-name" style="--x:70%; left:70%; top:40%;">💖 Ashley 💖</div>
   </div>
 
   <!-- Stage 5 -->
@@ -178,15 +194,12 @@ button:active{ transform: scale(.98); }
     <span class="badge">💜 Good Vibes</span>
     <h1>Will you be my Valentine, Kababyyy?? 💘</h1>
     <p class="sub">I’m officially applying for the position of your Valentine 😌✨</p>
-
     <div class="prompt">
       <div id="message" class="message" aria-live="polite"></div>
-
       <div class="btn-row" id="buttons">
         <button class="yes" id="yesBtn">Yes 💜</button>
         <button class="no" id="noBtn">No 😏</button>
       </div>
-
       <span class="tiny" id="psText">P.S. "No" inafinyika huskii…</span>
     </div>
   </div>
@@ -198,30 +211,32 @@ button:active{ transform: scale(.98); }
 </main>
 
 <script>
-/* ---------- Stage navigation with fade-in ---------- */
-const stageIds = ["stage1","stage2","stage3","stage4","stage5","stage6"];
+/* ---------- Sound effects ---------- */
+const heartAudio = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAAAB3AQACABAAZGF0YQAAAAA=");
+const noAudio = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAAAB3AQACABAAZGF0YQAAAAA=");
+const swooshAudio = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAAAB3AQACABAAZGF0YQAAAAA=");
 
+/* ---------- Stage navigation with swoosh ---------- */
+const stageIds = ["stage1","stage2","stage3","stage4","stage5","stage6"];
 function showStage(id){
-  stageIds.forEach(s => {
-    const el = document.getElementById(s);
+  swooshAudio.currentTime=0; swooshAudio.play();
+  stageIds.forEach(s=>{
+    const el=document.getElementById(s);
     if(!el) return;
-    if(s === id){
-      el.style.display = "block"; // Ensure visible for transition
-      requestAnimationFrame(()=> el.classList.add("active"));
-    } else {
-      el.classList.remove("active");
-      setTimeout(()=> { if(!el.classList.contains("active")) el.style.display="none"; }, 450);
-    }
+    if(s===id){ el.style.display="block"; requestAnimationFrame(()=>el.classList.add("active")); }
+    else{ el.classList.remove("active"); setTimeout(()=>{ if(!el.classList.contains("active")) el.style.display="none"; },450);}
   });
 }
 
-document.getElementById("btn1").addEventListener("click", ()=> showStage("stage2"));
-document.getElementById("btn2").addEventListener("click", ()=> showStage("stage3"));
-document.getElementById("btn3").addEventListener("click", ()=> showStage("stage4"));
-document.getElementById("btn4").addEventListener("click", ()=> showStage("stage5"));
+/* ---------- Stage button events ---------- */
+document.getElementById("btn1").addEventListener("click",()=>showStage("stage2"));
+document.getElementById("btn2").addEventListener("click",()=>showStage("stage3"));
+document.getElementById("btn3").addEventListener("click",()=>showStage("stage4"));
+document.getElementById("btn4").addEventListener("click",()=>showStage("stage5"));
 
-/* ---------- Hearts pop ---------- */
+/* ---------- Hearts pop with sound ---------- */
 function heartPop(x,y){
+  heartAudio.currentTime=0; heartAudio.play();
   const hearts=["💜","💟","💖","💘","✨"];
   for(let i=0;i<18;i++){
     const h=document.createElement("div");
@@ -239,19 +254,17 @@ function heartPop(x,y){
 }
 
 /* ---------- Screen shake ---------- */
-const card = document.getElementById("card");
+const card=document.getElementById("card");
 function shakeCard(){ card.classList.remove("shake"); void card.offsetWidth; card.classList.add("shake"); setTimeout(()=>card.classList.remove("shake"),240); }
 
-/* ---------- Yes/No logic ---------- */
-const yesBtn = document.getElementById("yesBtn");
-const noBtn = document.getElementById("noBtn");
-const messageEl = document.getElementById("message");
-const successBox = document.getElementById("successBox");
+/* ---------- Yes/No logic with wobble & sound ---------- */
+const yesBtn=document.getElementById("yesBtn");
+const noBtn=document.getElementById("noBtn");
+const messageEl=document.getElementById("message");
+const successBox=document.getElementById("successBox");
+let noClicks=0, locked=false;
 
-let noClicks = 0;
-let locked = false;
-
-const noMessages = [
+const noMessages=[
   "We mtoto, finya YES!!! 😏☹️",
   "Baaaabe... 🙄😏",
   "Ni mimi unataka kufanyia hivi? 😭😭",
@@ -262,59 +275,46 @@ const noMessages = [
 function registerNoAttempt(){
   if(locked) return;
   noClicks++;
-  messageEl.textContent = noMessages[Math.min(noClicks-1, noMessages.length-1)];
+  messageEl.textContent=noMessages[Math.min(noClicks-1,noMessages.length-1)];
   shakeCard();
-  if(noClicks >= 5){
-    noBtn.style.display = "none";
-    yesBtn.style.transform = "scale(1.08)";
-    yesBtn.style.filter = "brightness(1.08)";
-  }
+  noAudio.currentTime=0; noAudio.play(); // play boing
+  noBtn.style.transition="transform 150ms";
+  noBtn.style.transform="rotate(-20deg)";
+  setTimeout(()=>{noBtn.style.transform="rotate(20deg)";},75);
+  setTimeout(()=>{noBtn.style.transform="rotate(0deg)";},150);
+  if(noClicks>=5){ noBtn.style.display="none"; yesBtn.style.transform="scale(1.08)"; yesBtn.style.filter="brightness(1.08)";}
 }
 
 function dodgeNoButton(){
-  if(locked || noBtn.style.display === "none") return;
-  const prompt = document.querySelector("#stage5 .prompt");
-  const pRect = prompt.getBoundingClientRect();
-  const bRect = noBtn.getBoundingClientRect();
-  const maxX = Math.max(60, Math.min(170, (pRect.width/2) - (bRect.width/2) - 14));
-  const maxY = Math.max(30, Math.min(120, (pRect.height/2) - (bRect.height/2) - 14));
-  const dx = (Math.random() * 2 - 1) * maxX;
-  const dy = (Math.random() * 2 - 1) * maxY;
-  noBtn.style.transform = `translate(${dx}px, ${dy}px)`;
+  if(locked || noBtn.style.display==="none") return;
+  const prompt=document.querySelector("#stage5 .prompt");
+  const pRect=prompt.getBoundingClientRect();
+  const bRect=noBtn.getBoundingClientRect();
+  const maxX=Math.max(60,Math.min(170,(pRect.width/2)-(bRect.width/2)-14));
+  const maxY=Math.max(30,Math.min(120,(pRect.height/2)-(bRect.height/2)-14));
+  const dx=(Math.random()*2-1)*maxX;
+  const dy=(Math.random()*2-1)*maxY;
+  noBtn.style.transform=`translate(${dx}px, ${dy}px)`;
 }
 
 noBtn.addEventListener("pointerenter", dodgeNoButton);
-noBtn.addEventListener("pointerdown", (e) => { registerNoAttempt(); dodgeNoButton(); if(e.pointerType==="touch") e.preventDefault(); });
-noBtn.addEventListener("click", () => { registerNoAttempt(); dodgeNoButton(); });
+noBtn.addEventListener("pointerdown",(e)=>{ registerNoAttempt(); dodgeNoButton(); if(e.pointerType==="touch") e.preventDefault(); });
+noBtn.addEventListener("click",()=>{ registerNoAttempt(); dodgeNoButton(); });
 
 /* ---------- Typing effect ---------- */
-const sleep = (ms) => new Promise(r=>setTimeout(r,ms));
-function typeText(text, el, speed=28){
-  const chars = Array.from(text);
-  return new Promise(resolve => {
-    let i=0;
-    const timer = setInterval(()=>{
-      el.append(chars[i]); i++;
-      if(i>=chars.length){ clearInterval(timer); resolve(); }
-    }, speed);
-  });
-}
-async function typeLines(lines, el, speed=28, linePause=380){
-  el.innerHTML="";
-  for(let i=0;i<lines.length;i++){
-    await typeText(lines[i], el, speed);
-    if(i<lines.length-1){ el.appendChild(document.createElement("br")); await sleep(linePause); }
-  }
-}
+const sleep=(ms)=>new Promise(r=>setTimeout(r,ms));
+function typeText(text,el,speed=28){ const chars=Array.from(text); return new Promise(resolve=>{let i=0; const timer=setInterval(()=>{ el.append(chars[i]); i++; if(i>=chars.length){ clearInterval(timer); resolve(); }},speed);});}
+async function typeLines(lines,el,speed=28,linePause=380){ el.innerHTML=""; for(let i=0;i<lines.length;i++){ await typeText(lines[i],el,speed); if(i<lines.length-1){ el.appendChild(document.createElement("br")); await sleep(linePause); } }}
 
-yesBtn.addEventListener("click", async (e)=>{
+/* ---------- Yes button ---------- */
+yesBtn.addEventListener("click", async(e)=>{
   if(locked) return;
-  locked = true;
-  heartPop(e.clientX, e.clientY);
+  locked=true;
+  heartPop(e.clientX,e.clientY);
   showStage("stage6");
   successBox.innerHTML=`
-    <div style="font-weight:900; font-size:20px; margin-bottom:8px;">It’s a date! 💘💜</div>
-    <div id="typedMsg" style="color:#f3e9ff; line-height:1.6; font-weight:700;"></div>
+    <div style="font-weight:900;font-size:20px;margin-bottom:8px;">It’s a date! 💘💜</div>
+    <div id="typedMsg" style="color:#f3e9ff;line-height:1.6;font-weight:700;"></div>
   `;
   const lines=[
     "I knew you’d say YES! 🥺💜",
@@ -322,10 +322,10 @@ yesBtn.addEventListener("click", async (e)=>{
     "Happy Valentine’s Day, my love! 🌹💜",
     "Ulikuwa unafinya No ndio?? Feilyaaa😂😂"
   ];
-  await typeLines(lines, document.getElementById("typedMsg"),26,320);
-  setTimeout(()=>heartPop(window.innerWidth*0.5, window.innerHeight*0.35),250);
-  setTimeout(()=>heartPop(window.innerWidth*0.35, window.innerHeight*0.55),520);
-  setTimeout(()=>heartPop(window.innerWidth*0.65, window.innerHeight*0.55),760);
+  await typeLines(lines,document.getElementById("typedMsg"),26,320);
+  setTimeout(()=>heartPop(window.innerWidth*0.5,window.innerHeight*0.35),250);
+  setTimeout(()=>heartPop(window.innerWidth*0.35,window.innerHeight*0.55),520);
+  setTimeout(()=>heartPop(window.innerWidth*0.65,window.innerHeight*0.55),760);
 });
 </script>
 </body>
