--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@ button:active{ transform: scale(.98); }
   50% { transform: translateY(-20px) rotate(15deg);}
   100% { transform: translateY(0) rotate(-15deg);}
 }
+
+/* Music toggle button */
+#musicToggle {
+  position:fixed; bottom:20px; right:20px; z-index:999;
+  background:#b65cff44; border:1px solid #fff; border-radius:50px;
+  color:white; padding:10px 16px; cursor:pointer; font-weight:600;
+}
 </style>
 </head>
 
@@ -210,6 +217,12 @@ button:active{ transform: scale(.98); }
   </div>
 </main>
 
+<!-- Background music -->
+<audio id="bgMusic" loop>
+  <source src="file:///C:/Users/user/Downloads/Bien. - Chikwere (Official Audio).mp3" type="audio/mpeg">
+</audio>
+<button id="musicToggle">🎵 Play Music</button>
+
 <script>
 /* ---------- Sound effects ---------- */
 const heartAudio = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAAAB3AQACABAAZGF0YQAAAAA=");
@@ -236,7 +249,7 @@ document.getElementById("btn4").addEventListener("click",()=>showStage("stage5")
 
 /* ---------- Hearts pop with sound ---------- */
 function heartPop(x,y){
-  heartAudio.currentTime=0; heartAudio.play();
+  heartAudio.play().catch(()=>{});
   const hearts=["💜","💟","💖","💘","✨"];
   for(let i=0;i<18;i++){
     const h=document.createElement("div");
@@ -277,7 +290,7 @@ function registerNoAttempt(){
   noClicks++;
   messageEl.textContent=noMessages[Math.min(noClicks-1,noMessages.length-1)];
   shakeCard();
-  noAudio.currentTime=0; noAudio.play(); // play boing
+  noAudio.play().catch(()=>{});
   noBtn.style.transition="transform 150ms";
   noBtn.style.transform="rotate(-20deg)";
   setTimeout(()=>{noBtn.style.transform="rotate(20deg)";},75);
@@ -327,6 +340,25 @@ yesBtn.addEventListener("click", async(e)=>{
   setTimeout(()=>heartPop(window.innerWidth*0.35,window.innerHeight*0.55),520);
   setTimeout(()=>heartPop(window.innerWidth*0.65,window.innerHeight*0.55),760);
 });
+
+/* ---------- Background music unlock ---------- */
+const bgMusic=document.getElementById("bgMusic");
+let audioUnlocked=false;
+function unlockAudio(){
+  if(audioUnlocked) return;
+  audioUnlocked=true;
+  bgMusic.play().catch(()=>{});
+}
+document.getElementById("card").addEventListener("click",unlockAudio,{once:true});
+document.getElementById("card").addEventListener("touchstart",unlockAudio,{once:true});
+
+/* ---------- Music toggle ---------- */
+const musicToggle=document.getElementById("musicToggle");
+musicToggle.addEventListener("click",()=>{
+  if(bgMusic.paused){ bgMusic.play(); musicToggle.textContent="🔇 Mute Music"; }
+  else{ bgMusic.pause(); musicToggle.textContent="🎵 Play Music"; }
+});
 </script>
+
 </body>
 </html>
