--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ button:active{ transform: scale(.98); }
 
 <!-- Background music -->
 <audio id="bgMusic" loop>
-  <source src="file:///C:/Users/user/Downloads/Bien. - Chikwere (Official Audio).mp3" type="audio/mpeg">
+  <source src="assets/Bien-Chikwere.mp3" type="audio/mpeg">
 </audio>
 <button id="musicToggle">🎵 Play Music</button>
 
@@ -362,3 +362,4 @@ musicToggle.addEventListener("click",()=>{
 
 </body>
 </html>
+
