Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ button:active{ transform: scale(.98); }
 
 <!-- Background music -->
 <audio id="bgMusic" loop>
-  <source src="assets/Bien-Chikwere.mp3" type="audio/mpeg">
+  <source src="assets/bien-chikwere.mp3" type="audio/mpeg">
 </audio>
 <button id="musicToggle">🎵 Play Music</button>
 
@@ -362,4 +362,5 @@ musicToggle.addEventListener("click",()=>{
 
 </body>
 </html>
+
 
